@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-08-31T01:04:13Z",
-  "count_outdated" : 569,
-  "uniques_outdated" : 395,
-  "count" : 571,
-  "uniques" : 397,
+  "timestamp" : "2025-09-06T00:57:25Z",
+  "count_outdated" : 570,
+  "uniques_outdated" : 396,
+  "count" : 572,
+  "uniques" : 398,
   "clones" : [
     {
-      "timestamp": "2025-08-22T00:00:00Z",
+      "timestamp": "2025-08-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-08-26T00:00:00Z",
+      "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
